// Copyright 2015 The gRPC Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
syntax = "proto3";
import "google/protobuf/empty.proto";

option java_multiple_files = true;
option java_package = "com.carcatalogue.proto";
option java_outer_classname = "CarCatalogueProto";

package carcatalogue;

service SearchCar {
  rpc Search (SearchRequest) returns (SearchReply) {}
  rpc AddCar (Car) returns (google.protobuf.Empty) {}
}

message SearchRequest {
  string manufacturer = 1;
  int32 releaseYear = 2;
}
message SearchReply {
  repeated Car cars = 1;
}
message Car {
  string manufacturer = 1;
  string model = 2;
  string version = 3;
  int32 releaseYear = 4;
  int32 priceInCents = 5;
  double fuelConsumption = 6;
  int32 maintenanceCostInCents = 7;
}